# jackknify

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.md  default.param  genindex.html  index.html  init.py  install.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: jekyll-gh-pages.yml  static.yml
Jack_it/: Jack_Knife.py  jacked.py
Notebooks/: LineFind.ipynb  LineJacked.ipynb
_build/doctrees/: install.doctree
_build/doctrees/notebooks/: HowToLineFind.doctree
_build/html/: .buildinfo  index.html  install.html  search.html
_build/html/notebooks/: HowToVisualize.html
_sources/: index.rst.txt  install.rst.txt  tutorials.rst.txt
docs/: conf.py  index.rst  install.rst  tutorials.rst
docs/_build/doctrees/: environment.pickle  index.doctree  install.doctree  tutorials.doctree
docs/_build/doctrees/notebooks/: HowToJackknife.doctree  HowToLineFind.doctree  HowToVisualize.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js  tutorials.html
docs/notebooks/: HowToJackknife.ipynb  HowToLineFind.ipynb  HowToVisualize.ipynb  default.sex  linefind.py
doctrees/: tutorials.doctree
jacked/: ImSettings.py  Main.py  MsManager.py  Operator.py  Plot.py  __init__.py  io.py
jackknify/: ImSettings.py  JAXknife.py  Main.py  MsManager.py  Plot.py  io.py
notebooks/: HowToJackknife.html  HowToJackknife.ipynb  HowToLineFind.html  HowToLineFind.ipynb  HowToVisualize.html  HowToVisualize.ipynb  Visualize_Jackknifing.ipynb  linefind.py  test.ipynb  testing.ipynb
src/: Config.py  FourierTransform.py  ImSettings.py  Models.py  MsManager.py  Settings.py  UnitTransform.py  Utillities.py  jacked.py
tests/: test_fetch.py
(+9 files in other folders)
