[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[project]
name = "jackknify"
version = "0.3.0"
authors = [
  { name="Joshiwa van Marrewijk", email="joshiwa01@gmail.com" },
]
description = "Jackknifing interferometric datasets"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["casatools","casatasks","casadata","interferopy","numpy","scipy","astropy","matplotlib","ipython"]

[project.urls]
Homepage = "https://github.com/Joshiwavm/jackknify"
Issues = "https://github.com/Joshiwavm/jackknify/issues"
